k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APPLICATION-NAME-app
  labels:
    name: APPLICATION-NAME-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: APPLICATION-NAME-app
  template:
    metadata:
      labels:
        name: APPLICATION-NAME-app
    spec:
      containers:
      - name: APPLICATION-NAME-app
        imagePullPolicy: Always
        image: APPLICATION-IMAGE
        ports:
        - containerPort: 8000
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: APPLICATION-NAME-pvc
      restartPolicy: Always
