k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: APPLICATION-NAME-app
spec:
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: tcp
  selector:
    name: APPLICATION-NAME-app
